2005-05-21  Manish Singh  <yosh@gimp.org>

	* plug-ins/metadata/metadata.c (run): don't do pointer arithmetic
	with void *. Fixes bug #305005.

2005-05-22  Michael Natterer  <mitch@gimp.org>

	* tools/test-clipboard.c: added --selection-type option which
	allows operating on any of PRIMARY, SECONDARY and CLIPBOARD.

2005-05-21  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdashpattern.[ch]: added utility functions to copy
	and to free a dash pattern.

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h 
	* app/widgets/gimpcellrendererdashes.[ch]: added a simple cell
	renderer to visualize a dash pattern.

	* app/widgets/gimpstrokeeditor.c: show previews of the dash
	presets in the combo-box.

2005-05-21  Michael Natterer  <mitch@gimp.org>

	* tools/test-clipboard.c (main): NULL terminate the options array.

2005-05-21  Sven Neumann  <sven@gimp.org>

	Allow to paste a new image using Ctrl-V (bug #169477):

	* menus/toolbox-menu.xml.in: added an accelerator for "edit-paste".

	* app/actions/edit-actions.c: keep "edit-paste" always enabled,
	even if no image is present.

	* app/actions/edit-commands.c (edit_paste_cmd_callback): forward
	to "edit-paste-as-new" if we are being called from the toolbox.
	
2005-05-21  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpuimanager.c: improved reporting of errors while
	parsing the menu definitions.

2005-05-21  Sven Neumann  <sven@gimp.org>

	* app/dialogs/convert-dialog.c: 
	* libgimp/gimpexport.c (export_convert_indexed): changed default
	dithering to GIMP_NO_DITHER (bug #303063).

2005-05-20  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolorarea.c
	* libgimpwidgets/gimpcolorbutton.c: more object properties.

2005-05-20  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgetsenums.h
	* libgimpwidgets/gimpwidgetstypes.h: moved enums to a new file and
	register the GimpColorAreaType enum with the type system.

	* libgimpwidgets/gimpwidgets.def: updated.
